Corrected chrome extension mistake.

--- a/Google Chrome/SGPlusV2ChromeExtension/options.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/options.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Steamgifts Plus V2+</title>
-    <script src="options.js">
+    <script src="options.js" />
 </head>
 
 <body>
