Try 3 on chrome extension

--- a/Google Chrome/SGPlusV2ChromeExtension/options.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/options.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Steamgifts Plus V2+</title>
-    <script src="options.js" />
 </head>
 
 <body>
@@ -24,6 +23,7 @@
     <br>
     <div id="status"></div>
     <button id="save">Save</button>
+    <script src="options.js"></script>
 </body>
 
 </html>
