Changed to Chrome.storage.sync since LocalStorage is meh

--- a/Google Chrome/SGPlusV2ChromeExtension/options.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/options.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Steamgifts Plus V2+</title>
+    <script src="jquery-1.11.0.min.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         </div>
     </div>
     <br>
-    <div id="status"></div>
+    <div id="status">Options saved.</div>
     <button id="save">Save</button>
     <script src="options.js"></script>
 </body>
