Purged localstorage, started using configs
No more localstorage code to make it work temporarily for firefox, also
started using configs from chrome preferences.

--- a/Google Chrome/SGPlusV2ChromeExtension/options.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/options.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <br>
-    <div id="status">Options saved.</div>
+    <div id="status" style="display:hidden">Options saved.</div>
     <button id="save">Save</button>
     <script src="options.js"></script>
 </body>
