Added option to hide the featured wrapper

--- a/Google Chrome/SGPlusV2ChromeExtension/options.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/options.html
@@ -20,6 +20,9 @@
         <div>
             <input type="checkbox" id="fixed_navbar" /> Fixed Navbar
         </div>
+        <div>
+            <input type="checkbox" id="featured_wrapper" /> Hide Featured Wrapper
+        </div>
     </div>
     <br>
     <div id="status" style="display:none">Options saved.</div>
