Initial commit for endless scroll suport

--- a/Google Chrome/SGPlusV2ChromeExtension/options.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/options.html
@@ -23,6 +23,9 @@
         <div>
             <input type="checkbox" id="featured_wrapper" /> Hide Featured Wrapper
         </div>
+        <div>
+            <input type="checkbox" id="endless_scroll" /> Endless Scroll
+        </div>
     </div>
     <br>
     <div id="status" style="display:none">Options saved.</div>
