Added a button on Account dropdown to find plugin settings
It is only enabled for chrome as of now.

--- a/Google Chrome/SGPlusV2ChromeExtension/settings.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/settings.html
@@ -98,7 +98,7 @@
     <div class="footer__outer-wrap">
         <div class="footer__inner-wrap">
             <div class="footer__left-container">
-                <div>Always on beta.</div>
+                <div>Always in beta.</div>
             </div> <!-- End left container -->
             <div class="footer__right-container">
                 <div class="github"></div>
