--- a/Google Chrome/SGPlusV2ChromeExtension/settings.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/settings.html
@@ -57,9 +57,14 @@
                             <div class="add_hydrogen">
                                 <input type="checkbox" id="featured_wrapper" /> Hide Featured Wrapper
                             </div>
+
                             <div class="add_hydrogen">
                                 <input type="checkbox" id="endless_scroll" /> Endless Scroll
                             </div>
+                            <div class="add_hydrogen add_indent">
+                                <input type="checkbox" id="seamless_scroll" /> Seamless Scrolling
+                            </div>
+
                         </div>
                     </div>
                     <div class="form__heading">
