Adds Comment on top box

--- a/Google Chrome/SGPlusV2ChromeExtension/settings.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/settings.html
@@ -64,6 +64,9 @@
                             <div class="add_hydrogen add_indent">
                                 <input type="checkbox" id="seamless_scroll" /> Seamless Scrolling
                             </div>
+                            <div class="add_hydrogen">
+                                <input type="checkbox" id="comment_on_top" /> Comment Box on Top
+                            </div>
 
                         </div>
                     </div>
