Pushes an updated settings.html

--- a/Google Chrome/SGPlusV2ChromeExtension/settings.html
+++ b/Google Chrome/SGPlusV2ChromeExtension/settings.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- No easter eggs here, move along -->
     <meta charset="UTF-8" />
     <title>Steamgifts Plus V2 - Settings</title>
     <link rel='stylesheet' type='text/css' href='settings.css' />
@@ -59,13 +60,15 @@
                             </div>
 
                             <div class="add_hydrogen">
+                                <input type="checkbox" id="comment_on_top" /> Comment Box on Top
+                            </div>
+
+                            <div class="add_hydrogen">
                                 <input type="checkbox" id="endless_scroll" /> Endless Scroll
                             </div>
-                            <div class="add_hydrogen add_indent">
+                            
+                            <div class="add_hydrogen form__row__indent child_setting">
                                 <input type="checkbox" id="seamless_scroll" /> Seamless Scrolling
-                            </div>
-                            <div class="add_hydrogen">
-                                <input type="checkbox" id="comment_on_top" /> Comment Box on Top
                             </div>
 
                         </div>
@@ -115,7 +118,7 @@
                 <div class="spacer"></div>
                 <div></div>
                 <div class="twitter"></div>
-                <div><a href="https://twitter.com/leomoty">&#64;leomoty</a></div>
+                <div class="heightfix_twitter"><a href="https://twitter.com/leomoty">&#64;leomoty</a></div>
             </div> <!-- End right container -->
         </div> <!-- End footer, inner-wrap -->
     </div> <!-- End footer, outer-wrap -->
